--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@ body{
     background-color: #f4f4f4;
     padding: 20px;
 }
-/* .i{
-    color: red;
-}
-.fa-brands{
-    font-size: 24px;
-    margin: 10px;
-    color: #a72020;
-} */
+ .imgs{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
+    border: 2px solid #ccc;
+    }
